--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,7 +7,7 @@ on:
       - '*'
 
 jobs:
-  lint-test:
+  static-code-analysis:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -15,10 +15,12 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set up Helm
-        uses: azure/setup-helm@5119fcb9089d432beecbf79bb2c7915207344b78 # v3.5
+      - name: Setup action-setup-kube-tools
+        uses: yokawasa/action-setup-kube-tools@v0.11.1
         with:
-          version: v3.13.0
+          setup-tools: |
+            helm
+            kubeconform
 
       # Python is required because `ct lint` runs Yamale (https://github.com/23andMe/Yamale) and
       # yamllint (https://github.com/adrienverge/yamllint) which require Python
@@ -29,6 +31,11 @@ jobs:
 
       - name: Set up chart-testing
         uses: helm/chart-testing-action@e6669bcd63d7cb57cb4380c33043eebe5d111992 # v2.6.1
+
+#       - name: Setup polaris
+#         uses: fairwindsops/polaris/.github/actions/setup-polaris@master
+#         with:
+#           version: 5.0.0
 
       - name: Run chart-testing (list-changed)
         id: list-changed
@@ -50,21 +57,14 @@ jobs:
 # 
 #       - name: Run chart-testing (install)
 #         run: ct install --config ct.yaml
-  kubeconform:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4.1.0
-        with:
-          fetch-depth: 0
-      - name: Setup action-setup-kube-tools
-        uses: yokawasa/action-setup-kube-tools@v0.11.1
-        with:
-          setup-tools: |
-            kubeconform
-            helm
+
       - name: Check with kubeconform
         run: |
           find ./charts -maxdepth 1 -mindepth 1 \
           | xargs -I {} helm template {} -f values/env/tes/values.yaml \
           | kubeconform --summary --output json  # -depth 1の場合エラーになる
+      
+#      - name: Check with Polaris
+#        run: |
+#          find ./charts -maxdepth 1 -mindepth 1 \
+#          | xargs -I {} polaris audit --only-show-failed-tests --helm-chart {} --helm-values ./values/env/tes/values.yaml
