--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,6 +6,9 @@ on:
     branches:
       - '*'
 
+# permissions:
+#   security-events: write # To upload sarif files
+
 jobs:
   static-code-analysis:
     runs-on: ubuntu-latest
@@ -68,3 +71,20 @@ jobs:
 #        run: |
 #          find ./charts -maxdepth 1 -mindepth 1 \
 #          | xargs -I {} polaris audit --only-show-failed-tests --helm-chart {} --helm-values ./values/env/tes/values.yaml
+
+      - name: Run Trivy vulnerability scanner in IaC mode
+        uses: aquasecurity/trivy-action@6e7b7d1fd3e4fef0c5fa8cce1229c54b2c9bd0d8 # tag=0.24.0
+        with:
+          scan-type: 'config'
+          hide-progress: false
+          format: 'table'
+          scan-ref: 'charts'
+          # output: 'trivy-results.sarif'
+          exit-code: '1'
+          ignore-unfixed: true
+          severity: 'CRITICAL,HIGH'
+
+#       - name: Upload Trivy scan results to GitHub Security tab
+#         uses: github/codeql-action/upload-sarif@064a406de026ea27990a5b507b56911401ca2f95 # v3.25.12
+#         with:
+#           sarif_file: 'trivy-results.sarif'
