--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,72 +6,42 @@ on:
     branches:
       - '*'
 
-# SARIFファイルをGitHubにアップロードする場合に必要
-# permissions:
-#   security-events: write # To upload sarif files
-
 jobs:
   static-code-analysis:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        # ツールによってチャートのパスを明示する必要があるためリストアップしておく
+        chart:
+          - mywebapp
     steps:
       - name: Checkout
         uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4.1.0
         with:
           fetch-depth: 0
 
-      - name: Setup action-setup-kube-tools
-        uses: yokawasa/action-setup-kube-tools@v0.11.1
-        with:
-          setup-tools: |
-            helm
-            kubeconform
+      - name: Set up helm
+        uses: azure/setup-helm@fe7b79cd5ee1e45176fcad797de68ecaf3ca4814 # v4.2.0
 
-      # Python is required because `ct lint` runs Yamale (https://github.com/23andMe/Yamale) and
-      # yamllint (https://github.com/adrienverge/yamllint) which require Python
-      - name: Set up Python
-        uses: actions/setup-python@65d7f2d534ac1bc67fcd62888c5f4f3d2cb2b236 # v4.7.1
-        with:
-          python-version: 3.x
-
-      - name: Set up chart-testing
-        uses: helm/chart-testing-action@e6669bcd63d7cb57cb4380c33043eebe5d111992 # v2.6.1
-
-      - name: Setup polaris
-        uses: fairwindsops/polaris/.github/actions/setup-polaris@master
-        with:
-          version: 5.0.0
-
-      - name: Run chart-testing (list-changed)
-        id: list-changed
+      - name: Install kubeconform
         run: |
-          changed=$(ct list-changed --config ct.yaml)
-          if [[ -n "$changed" ]]; then
-            echo "changed=true" >> $GITHUB_OUTPUT
-          fi
+          wget -q -O - https://github.com/yannh/kubeconform/releases/download/v0.6.6/kubeconform-linux-amd64.tar.gz | tar -zxvf - -C /usr/local/bin
 
-      - name: Run chart-testing (lint)
+      - name: Install Polaris
         run: |
-          ct lint --config ct.yaml validate-maintainers: true \
-          --validate-maintainers=false # Maintainerのチェックを無効化
+          wget -q -O - https://github.com/FairwindsOps/polaris/releases/download/9.2.0/polaris_linux_amd64.tar.gz | tar -zxvf - -C /usr/local/bin
 
-# 今回はinstallをしてテストまではしないのでコメントアウト
-#       - name: Create kind cluster
-#         uses: helm/kind-action@dda0770415bac9fc20092cacbc54aa298604d140 # v1.8.0
-#         if: steps.list-changed.outputs.changed == 'true'
-# 
-#       - name: Run chart-testing (install)
-#         run: ct install --config ct.yaml
+      - name: Lint Helm Chart
+        run: helm lint ./charts/${{ matrix.chart }}
+        continue-on-error: true
 
-      - name: Check with kubeconform
-        run: |
-          find ./charts -maxdepth 1 -mindepth 1 \
-          | xargs -I {} helm template {} -f values/env/tes/values.yaml \
-          | kubeconform --summary --output json  # -depth 1の場合エラーになる
-      
-      - name: Check with Polaris
-        run: |
-          find ./charts -maxdepth 1 -mindepth 1 \
-          | xargs -I {} polaris audit --only-show-failed-tests --helm-chart {} --helm-values ./values/env/tes/values.yaml
+      - name: Run kubeconform
+        run: kubeconform --summary -output json ./charts/${{ matrix.chart }}
+        continue-on-error: true
+
+      - name: Run Polaris audit
+        run: polaris audit --only-show-failed-tests --helm-chart ./charts/${{ matrix.chart }}
+        continue-on-error: true
 
       - name: Run Trivy vulnerability scanner in IaC mode
         uses: aquasecurity/trivy-action@6e7b7d1fd3e4fef0c5fa8cce1229c54b2c9bd0d8 # tag=0.24.0
@@ -79,14 +49,19 @@ jobs:
           scan-type: 'config'
           hide-progress: false
           format: 'table'
-          scan-ref: 'charts'
+          scan-ref: 'charts/${{ matrix.chart }}'
           # output: 'trivy-results.sarif'
           exit-code: '1'
           ignore-unfixed: true
           severity: 'CRITICAL,HIGH'
+        continue-on-error: true
 
-# SARIFファイルをGitHubにアップロードするとき設定
-#       - name: Upload Trivy scan results to GitHub Security tab
-#         uses: github/codeql-action/upload-sarif@064a406de026ea27990a5b507b56911401ca2f95 # v3.25.12
-#         with:
-#           sarif_file: 'trivy-results.sarif'
+      - name: Check results
+        run: |
+          if [ ${{ steps.helm_lint.outcome }} == 'failure' ] || [ ${{ steps.kubeconform.outcome }} == 'failure' ] || [ ${{ steps.trivy.outcome }} == 'failure' ] || [ ${{ steps.polaris.outcome }} == 'failure' ]; then
+            echo "One or more steps failed"
+            exit 1
+          else
+            echo "All steps succeeded"
+            exit 0
+          fi
