--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -31,19 +31,22 @@ jobs:
         run: |
           wget -q -O - https://github.com/FairwindsOps/polaris/releases/download/9.2.0/polaris_linux_amd64.tar.gz | tar -zxvf - -C /usr/local/bin
 
-      - name: Lint Helm Chart
+      - name: "[${{ matrix.chart }}]: Lint Helm Chart"
         run: helm lint ./charts/${{ matrix.chart }}
         continue-on-error: true
+        id: helm_lint
 
-      - name: Run kubeconform
+      - name: "[${{ matrix.chart }}]: Run kubeconform"
         run: kubeconform --summary -output json ./charts/${{ matrix.chart }}
         continue-on-error: true
+        id: kubeconform
 
-      - name: Run Polaris audit
+      - name: "[${{ matrix.chart }}]: Run Polaris audit"
         run: polaris audit --only-show-failed-tests --helm-chart ./charts/${{ matrix.chart }}
         continue-on-error: true
+        id: polaris
 
-      - name: Run Trivy vulnerability scanner in IaC mode
+      - name: "[${{ matrix.chart }}]: Run Trivy vulnerability scanner in IaC mode"
         uses: aquasecurity/trivy-action@6e7b7d1fd3e4fef0c5fa8cce1229c54b2c9bd0d8 # tag=0.24.0
         with:
           scan-type: 'config'
@@ -55,6 +58,7 @@ jobs:
           ignore-unfixed: true
           severity: 'CRITICAL,HIGH'
         continue-on-error: true
+        id: trivy
 
       - name: Check results
         run: |
