try comment to pr (#4)
* fix trigger

* add github-comment for comment in pr

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,8 +1,8 @@
 on:
   pull_request:
+    branches:
+      - main
     types: [opened, synchronize]
-    paths:
-      - './charts/**'
 
 jobs:
   static-code-analysis:
@@ -20,6 +20,13 @@ jobs:
         with:
           fetch-depth: 0
 
+      ### 各種ツールのインストール
+
+      # 各種ツールの実行結果をPull Requestにコメントして通知するために利用
+      - name: Install github-comment
+        run: |
+          wget -q -O - https://github.com/suzuki-shunsuke/github-comment/releases/download/v6.1.0/github-comment_6.1.0_linux_amd64.tar.gz | tar -zxvf - -C /usr/local/bin
+
       - name: Set up helm
         uses: azure/setup-helm@fe7b79cd5ee1e45176fcad797de68ecaf3ca4814 # v4.2.0
 
@@ -35,23 +42,34 @@ jobs:
         run: |
           wget -q -O - https://github.com/FairwindsOps/pluto/releases/download/v5.19.4/pluto_5.19.4_linux_amd64.tar.gz | tar -zxvf - -C /usr/local/bin
 
+      ### 静的解析
+
       - name: "[${{ matrix.chart }}]: Lint Helm Chart"
-        run: helm lint ./charts/${{ matrix.chart }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        # Pull Requestに出力される結果はexit codeが0ではない場合であるため動作確認のため `--strict` オプションを付与
+        run: github-comment exec -pr ${{ github.event.number }} -k static-code-analysis -- helm lint --strict ./charts/${{ matrix.chart }}
         continue-on-error: true
         id: helm_lint
 
       - name: "[${{ matrix.chart }}]: Run kubeconform"
-        run: kubeconform --summary -output json ./charts/${{ matrix.chart }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: github-comment exec -pr ${{ github.event.number }} -k static-code-analysis -- kubeconform --summary -output pretty ./charts/${{ matrix.chart }}
         continue-on-error: true
         id: kubeconform
 
       - name: "[${{ matrix.chart }}]: Run Polaris audit"
-        run: polaris audit --only-show-failed-tests --helm-chart ./charts/${{ matrix.chart }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: github-comment exec -pr ${{ github.event.number }} -k static-code-analysis -- polaris audit --only-show-failed-tests --format pretty --severity danger --set-exit-code-on-danger --helm-chart ./charts/${{ matrix.chart }}
         continue-on-error: true
         id: polaris
 
       - name: "[${{ matrix.chart }}]: Run Pluto"
-        run: pluto detect-files -d ./charts/${{ matrix.chart }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: github-comment exec -pr ${{ github.event.number }} -k static-code-analysis -- pluto detect-files -d ./charts/${{ matrix.chart }}
         continue-on-error: true
         id: pluto
 
