--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,5 +6,7 @@ on:
     types: [opened, synchronize]
 
 jobs:
-  static-code-analysis:
+  helm-static-code-analysis:
     uses: k-ngs-test/gh-workflows/.github/workflows/_helm_static_analysis_template.yaml@main
+  kustomize-static-code-analysis:
+    uses: k-ngs-test/gh-workflows/.github/workflows/_kustomize_static_analysis_template.yaml@main
