--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
     types: [opened, synchronize]
-
+# test
 jobs:
   helm-static-code-analysis:
     uses: k-ngs-test/gh-workflows/.github/workflows/_helm_static_analysis_template.yaml@main
